--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.16",
     "autoprefixer": "^10.4.23",
+    "axios": "^1.13.2",
     "daisyui": "^5.5.14",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
