--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
@@ -19,6 +18,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
     "nodemon": "^3.1.11",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "uuid": "^10.0.0"
   }
 }
